proj/hdmi-out.sdk/.metadata/.plugins/org.eclipse.cdt.ui/interrupt_counter.build.log
21:55:24 **** Incremental Build of configuration Debug for project interrupt_counter ****
make pre-build main-build 
a9-linaro-pre-build-step
' '
'Building file: ../src/interrupt_counter_tut_2D.c'
'Invoking: ARM v7 gcc compiler'
arm-none-eabi-gcc -Wall -O0 -g3 -I../../interrupt_counter_bsp/ps7_cortexa9_0/include -I"D:\Xilinx\SDK\2019.1\data\embeddedsw\XilinxProcessorIPLib\drivers\tmrctr_v4_4\src" -c -fmessage-length=0 -MT"src/interrupt_counter_tut_2D.o" -mcpu=cortex-a9 -mfpu=vfpv3 -mfloat-abi=hard -MMD -MP -MF"src/interrupt_counter_tut_2D.d" -MT"src/interrupt_counter_tut_2D.o" -o "src/interrupt_counter_tut_2D.o" "../src/interrupt_counter_tut_2D.c"
../src/interrupt_counter_tut_2D.c: In function 'main':
../src/interrupt_counter_tut_2D.c:29:24: error: 'XPAR_TMRCTR_0_DEVICE_ID' undeclared (first use in this function); did you mean 'XPAR_XSLCR_0_DEVICE_ID'?
 #define TMR_DEVICE_ID  XPAR_TMRCTR_0_DEVICE_ID
                        ^~~~~~~~~~~~~~~~~~~~~~~
../src/interrupt_counter_tut_2D.c:124:41: note: in expansion of macro 'TMR_DEVICE_ID'
   status = XTmrCtr_Initialize(&TMRInst, TMR_DEVICE_ID);
                                         ^~~~~~~~~~~~~
../src/interrupt_counter_tut_2D.c:29:24: note: each undeclared identifier is reported only once for each function it appears in
 #define TMR_DEVICE_ID  XPAR_TMRCTR_0_DEVICE_ID
                        ^~~~~~~~~~~~~~~~~~~~~~~
../src/interrupt_counter_tut_2D.c:124:41: note: in expansion of macro 'TMR_DEVICE_ID'
   status = XTmrCtr_Initialize(&TMRInst, TMR_DEVICE_ID);
                                         ^~~~~~~~~~~~~
../src/interrupt_counter_tut_2D.c:126:32: warning: passing argument 2 of 'XTmrCtr_SetHandler' from incompatible pointer type [-Wincompatible-pointer-types]
   XTmrCtr_SetHandler(&TMRInst, TMR_Intr_Handler, &TMRInst);
                                ^~~~~~~~~~~~~~~~
In file included from ../src/interrupt_counter_tut_2D.c:22:
D:\Xilinx\SDK\2019.1\data\embeddedsw\XilinxProcessorIPLib\drivers\tmrctr_v4_4\src/xtmrctr.h:306:64: note: expected 'XTmrCtr_Handler' {aka 'void (*)(void *, unsigned char)'} but argument is of type 'void (*)(void *)'
 void XTmrCtr_SetHandler(XTmrCtr * InstancePtr, XTmrCtr_Handler FuncPtr,
                                                ~~~~~~~~~~~~~~~~^~~~~~~
../src/interrupt_counter_tut_2D.c: In function 'IntcInitFunction':
../src/interrupt_counter_tut_2D.c:33:31: error: 'XPAR_FABRIC_AXI_TIMER_0_INTERRUPT_INTR' undeclared (first use in this function); did you mean 'XPAR_FABRIC_AXI_GPIO_0_IP2INTC_IRPT_INTR'?
 #define INTC_TMR_INTERRUPT_ID XPAR_FABRIC_AXI_TIMER_0_INTERRUPT_INTR
                               ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
../src/interrupt_counter_tut_2D.c:33:31: note: in definition of macro 'INTC_TMR_INTERRUPT_ID'
 #define INTC_TMR_INTERRUPT_ID XPAR_FABRIC_AXI_TIMER_0_INTERRUPT_INTR
                               ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
make: *** [src/subdir.mk:23: src/interrupt_counter_tut_2D.o] Error 1

21:55:25 Build Finished (took 1s.168ms)

